--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="#C3000000">
+            app:passwordToggleTint="#23000000">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -67,10 +67,10 @@
                 android:background="@drawable/ic_password"
                 tools:ignore="ContentDescription"/>
 
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true"
                 app:passwordToggleTint="#CE040404">
 
                 <EditText
@@ -84,18 +84,25 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/checkBox"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password"
-            android:layout_gravity="end"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:checked="true"
-            android:text="记住密码"/>
+            android:layout_gravity="center_vertical"
+            android:text="确认密码"
+            android:textSize="18sp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:importantForAutofill="no"
+            android:inputType="textPassword" />
+
+    </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/login"
@@ -104,47 +111,13 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:text="欢迎登录"
+            android:text="注册成功"
             android:theme="@style/Theme.MaterialComponents.Light"
             app:backgroundTint="#FF3D7EFF"
             app:cornerRadius="50dp"/>
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:text="还没有账号？请点击此处注册！"
-            android:theme="@style/Theme.MaterialComponents.Light"/>
+
+
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/transparent"
-        android:text="其他方式登录"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_width="41dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_tencent_qq"
-            tools:ignore="ContentDescription" />
-
-        <Button
-            android:layout_width="41dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_weiboone"
-            tools:ignore="ContentDescription" />
-
-    </LinearLayout>
-
-</LinearLayout>
